@@ -1,3 +1,9 @@
+Wed May  2 14:39:59 UTC 2007  Douglas C. Schmidt  <schmidt@dre.vanderbilt.edu>
+
+        * ace/Dev_Poll_Reactor.cpp: Always remove the notification byte
+          from the pipe, avoiding an infinite loop.  Thanks to Eider
+          Oliveira <eider dot oliveira at gmail dot com> for this fix.
+
 Wed May  2 14:12:37 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * examples/APG/Naming/Naming_Context.h:
